chore: Last workflow fix maybe

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
         name: Release
         needs: [build-packeteer]
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
         steps:
             - name: Checkout Project
               uses: actions/checkout@v4
